<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="297dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:background="@drawable/ditu">

	<TextView
		android:id="@+id/resolution"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="37dp"
		android:text="@string/exit_window_title"
		android:textColor="#6a6a6a"
		android:textSize="18sp"/>

	<Button
		android:id="@+id/mainly_dialog_exit_confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/resolution"
		android:layout_marginLeft="27dp"
		android:layout_marginTop="37dp"
		android:text="@string/exit_window_yes"
		android:textColor="#6a6a6a"
		android:textSize="15sp"/>

	<Button
		android:id="@+id/mainly_dialog_exit_deny"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_below="@+id/resolution"
		android:layout_marginRight="27dp"
		android:layout_marginTop="37dp"
		android:text="@string/exit_window_cancel"
		android:textColor="#6a6a6a"
		android:textSize="15sp"/>
</RelativeLayout>