<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
											 xmlns:app="http://schemas.android.com/apk/res-auto"
											 android:layout_width="match_parent"
											 android:layout_height="match_parent">

	<View
		android:id="@+id/divider"
		android:layout_width="1dp"
		android:layout_height="0dp"
		android:layout_marginStart="105dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginRight="10dp"
		android:layout_marginTop="20dp"
		android:text="@string/ttt_set_video_params"
		android:textColor="#FF666666"
		android:textSize="15sp"
		app:layout_constraintEnd_toStartOf="@+id/divider"
		app:layout_constraintTop_toTopOf="parent"/>

	<so.library.SoSpinner
		android:id="@+id/local_pix_spinner"
		android:layout_width="0dp"
		android:layout_height="40dp"
		android:layout_marginEnd="20dp"
		android:background="@drawable/spinner_bg"
		android:gravity="center_vertical"
		android:paddingLeft="20dp"
		android:textColor="#FF666666"
		android:textSize="15sp"
		app:layout_constraintBottom_toBottomOf="@+id/textView2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/divider"
		app:layout_constraintTop_toTopOf="@+id/textView2"
		app:so_itemBackground="#FFFFFF"
		app:so_itemDatas="@array/SoVideoItems"
		app:so_itemHeight="40dp"
		app:so_itemPaddingLeft="20dp"
		app:so_itemTextColor="#FF666666"
		app:so_itemTextSize="15sp"/>

	<ImageView
		android:id="@+id/imageView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="7.4dp"
		android:src="@drawable/icon_arrow_down_h"
		app:layout_constraintBottom_toBottomOf="@+id/local_pix_spinner"
		app:layout_constraintEnd_toEndOf="@+id/local_pix_spinner"
		app:layout_constraintTop_toTopOf="@+id/local_pix_spinner"/>

	<TextView
		android:id="@+id/textView3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginRight="10dp"
		android:layout_marginTop="30dp"
		android:text="@string/ttt_set_resolution_params"
		android:textColor="#FF666666"
		android:textSize="15sp"
		app:layout_constraintEnd_toStartOf="@+id/divider"
		app:layout_constraintTop_toBottomOf="@+id/textView2"/>

	<EditText
		android:id="@+id/local_pix_view"
		android:layout_width="0dp"
		android:layout_height="40dp"
		android:layout_marginEnd="20dp"
		android:background="@drawable/textview_bg"
		android:enabled="false"
		android:gravity="center_vertical"
		android:paddingLeft="20dp"
		android:textColor="#FF999999"
		android:textSize="15sp"
		app:layout_constraintBottom_toBottomOf="@+id/textView3"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/divider"
		app:layout_constraintTop_toTopOf="@+id/textView3"/>

	<TextView
		android:id="@+id/textView4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginRight="10dp"
		android:layout_marginTop="30dp"
		android:text="@string/ttt_set_bitrate_params"
		android:textColor="#FF666666"
		android:textSize="15sp"
		app:layout_constraintEnd_toStartOf="@+id/divider"
		app:layout_constraintTop_toBottomOf="@+id/textView3"/>

	<TextView
		android:id="@+id/textView5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginRight="10dp"
		android:layout_marginTop="30dp"
		android:text="@string/ttt_set_fps_params"
		android:textColor="#FF666666"
		android:textSize="15sp"
		app:layout_constraintEnd_toStartOf="@+id/divider"
		app:layout_constraintTop_toBottomOf="@+id/textView4"/>

	<EditText
		android:id="@+id/local_bite_rate"
		android:layout_width="0dp"
		android:layout_height="40dp"
		android:layout_marginEnd="20dp"
		android:background="@drawable/textview_bg"
		android:enabled="false"
		android:gravity="center_vertical"
		android:inputType="number"
		android:paddingLeft="20dp"
		android:textColor="#FF999999"
		android:textSize="15sp"
		app:layout_constraintBottom_toBottomOf="@+id/textView4"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/divider"
		app:layout_constraintTop_toTopOf="@+id/textView4"/>

	<EditText
		android:id="@+id/local_frame_rate"
		android:layout_width="0dp"
		android:layout_height="40dp"
		android:layout_marginEnd="20dp"
		android:background="@drawable/textview_bg"
		android:enabled="false"
		android:gravity="center_vertical"
		android:inputType="number"
		android:paddingLeft="20dp"
		android:textColor="#FF999999"
		android:textSize="15sp"
		app:layout_constraintBottom_toBottomOf="@+id/textView5"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/divider"
		app:layout_constraintTop_toTopOf="@+id/textView5"/>

	<TextView
		android:id="@+id/textView9"
		android:layout_width="0dp"
		android:layout_height="1dp"
		android:layout_marginEnd="20dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:background="#FFD8D8D8"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/local_frame_rate"/>

	<TextView
		android:id="@+id/textView10"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginTop="10dp"
		android:text="@string/ttt_set_audio_params"
		android:textColor="#FF666666"
		android:textSize="15sp"
		app:layout_constraintEnd_toStartOf="@+id/divider"
		app:layout_constraintTop_toBottomOf="@+id/textView9"/>

	<TextView
		android:id="@+id/textView11"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginTop="20dp"
		android:text="@string/ttt_set_audio_high_params"
		android:textColor="#FF666666"
		android:textSize="15sp"
		app:layout_constraintEnd_toStartOf="@+id/divider"
		app:layout_constraintTop_toBottomOf="@+id/textView10"/>

	<Switch
		android:id="@+id/local_audio_switch"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="24dp"
		android:thumb="@drawable/setly_local_switch_thumb_selector"
		android:track="@drawable/setly_local_switch_track_selector"
		app:layout_constraintBottom_toBottomOf="@+id/textView11"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="@+id/textView11"/>

	<TextView
		android:id="@+id/local_ip_tv"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_centerVertical="true"
		android:gravity="center_vertical"
		android:text="IP："
		android:visibility="visible"
		app:layout_constraintBottom_toBottomOf="@+id/local_frame_ip"
		app:layout_constraintEnd_toStartOf="@+id/divider"
		app:layout_constraintTop_toBottomOf="@+id/local_audio_switch"
		app:layout_constraintTop_toTopOf="@+id/local_frame_ip"/>

	<EditText
		android:id="@+id/local_frame_ip"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginRight="24dp"
		android:digits="1234567890."
		android:inputType="numberDecimal"
		android:textSize="16sp"
		android:visibility="visible"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/divider"
		app:layout_constraintTop_toBottomOf="@+id/local_audio_switch"/>

	<TextView
		android:id="@+id/local_port_tv"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:gravity="center_vertical"
		android:text="Port："
		android:visibility="visible"
		app:layout_constraintBottom_toBottomOf="@+id/local_frame_port"
		app:layout_constraintEnd_toStartOf="@+id/divider"
		app:layout_constraintTop_toBottomOf="@+id/local_frame_ip"
		app:layout_constraintTop_toTopOf="@+id/local_frame_port"/>

	<EditText
		android:id="@+id/local_frame_port"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginRight="24dp"
		android:digits="1234567890."
		android:inputType="numberDecimal"
		android:textSize="16sp"
		android:visibility="visible"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/divider"
		app:layout_constraintTop_toBottomOf="@+id/local_frame_ip"/>
</android.support.constraint.ConstraintLayout>